--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: IT Projectmanagement | TechAcademy
+site_name: IT Projectmanagement
 theme:
   name: material 
   logo: images/white_logo_transparent.png
